# 42_filler

./: CMakeLists.txt  Makefile  README.md  a.out  bot.filler  c.c  filler  test.txt  ttt.txt
includes/: filler_header.h
libft/: Makefile
libft/src/: form_num_char.c
players/: bot.filler
src/: filler.c  part_definition.c  print_matr.c
